@@ -14,9 +14,6 @@ PKG_NAME="librsvg"
     exit 1
 }
 
-ACLOCAL_FLAGS="-I hack-macros $ACLOCAL_FLAGS"
-aclocal $ACLOCAL_FLAGS
-
 which gnome-autogen.sh || {
     echo "You need to install gnome-common from the GNOME CVS"
     exit 1
